Fix release build compilation errors